@@ -1,3 +1,13 @@
+2011-04-01  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (vc-start-logentry): refadvice removed
+	(clearcase-finish-checkout-reserved)
+	(clearcase-finish-checkout-unreserved): functions removed
+	(vc-clearcase-checkout): invoke `log-edit' directly instead via
+	`vc-start-entry'
+	(clearcase-bind-checkout-comment): new function, added to
+	`vc-before-checkin-hook'
+
 2011-03-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (vc-clearcase-root): when called with a nil arg,
